# youbot_driver

./: CMakeLists.txt
include/base-kinematic/: FourSwedishWheelOmniBaseDynamic.hpp  FourSwedishWheelOmniBaseDynamicConfiguration.hpp  WheeledBaseDynamic.hpp
include/youbot/: EthercatMasterInterface.hpp  EthercatMasterWithThread.hpp  EthercatMasterWithoutThread.hpp  YouBotBase.hpp  YouBotSlaveMailboxMsg.hpp  YouBotSlaveMsg.hpp
src/base-kinematic/: FourSwedishWheelOmniBaseDynamic.cpp  FourSwedishWheelOmniBaseDynamicConfiguration.cpp  WheeledBaseDynamic.cpp
src/display/: CMakeLists.txt
src/generic/: ConfigFile.cpp
src/soem/: CMakeLists.txt
src/test/: CMakeLists.txt  TestSuite.cpp  YouBotArmTest.cpp  YouBotArmTestWithoutThread.cpp  YouBotBaseKinematicsTest.cpp  YouBotBaseTest.cpp  YouBotBaseTestWithoutThread.cpp  YouBotGripperTest.cpp
src/youbot/: EthercatMasterWithThread.cpp  EthercatMasterWithoutThread.cpp  YouBotBase.cpp
